# prism-math

./: .gitignore  LICENSE  README.md  methods.csv  pyproject.toml
src/prism/: __init__.py
src/prism/techniques/: __init__.py  aliases.py  base.py  decomposition.py  operations.py  operations_2.py  registry.py
src/prism/techniques/advanced_techniques/: __init__.py  combinatorics_advanced.py  combinatorics_basic.py  functional_equations_cauchy.py  functional_equations_cyclic.py  number_theory.py  number_theory_base.py  number_theory_crt.py  number_theory_fermat.py  number_theory_gcd.py  number_theory_lte.py  number_theory_modular.py  number_theory_quadratic.py  number_theory_wilson.py  sequences_advanced.py  sequences_fibonacci.py
src/prism/techniques/algebra/: __init__.py  advanced_functions.py  equations.py  expressions.py  functions.py  inequalities.py  misc.py  polynomials.py  ported_algebra.py  ported_algebra_2.py  quadratics.py  stubs.py  vieta.py
src/prism/techniques/analysis_methods/: __init__.py  asymptotics.py  asymptotics_2.py  convergence.py  convergence_2.py  limits.py  limits_2.py  misc.py  ported_analysis.py  series.py
src/prism/techniques/basic_primitives/: __init__.py  algebra.py  arithmetic.py  arithmetic_2.py  arithmetic_3.py  geometry.py  (+6 more)
tests/: __init__.py  audit_input_factory.py  audit_known_values.py  audit_methods.py
tests/known_values/: __init__.py  advanced_techniques.py  algebra.py  algebra_1.py  algebra_2.py  analysis_methods.py  basic_primitives.py  combinatorics.py  geometry.py  geometry_1.py  geometry_2.py  number_theory.py
(+49 files in other folders)
