[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-math"
version = "0.1.0"
description = "718 composable mathematical method blocks for olympiad problem generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Seth Moudry" }
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]
